# ad-optimization-demo

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: bot.py  main.py
app/api/: routes.py
app/core/: config.py
app/db/: session.py
app/events/: kafka_consumer.py
app/models/: __init__.py  attribution.py  click.py  order.py
app/schemas/: events.py
app/services/: matching.py  metrika.py
app/workers/: tasks.py
scripts/: seed_demo.py
tests/: test_matching.py
